# agent-paradise-standards-system-WINDOW

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
crates/aps-cli/: Cargo.toml
crates/aps-cli/src/: cli_exemptions.rs  main.rs
crates/aps-cli/tests/: backwards_compat_test.rs  integration_test.rs  self_validation_test.rs  template_test.rs  workflow_test.rs
crates/aps-cli/tests/fixtures/: mod.rs
crates/apss-bootstrap/: Cargo.toml  README.md
crates/apss-bootstrap/src/: init.rs  install.rs  main.rs
crates/apss-bootstrap/tests/: init_integration.rs
crates/apss-core/: Cargo.toml  README.md
crates/apss-core/src/: config.rs  diagnostics.rs  discovery.rs  ecosystem.rs  lib.rs  lockfile.rs  metadata.rs  project_config_validation.rs  promotion.rs  registry.rs  resolution.rs  standard_config.rs  templates.rs  versioning.rs  views.rs
crates/apss-core/src/distribution/: codegen.rs  mod.rs
standards-experimental/v1/EXP-V1-0002-todo-tracker/: Cargo.toml  README.md  experiment.toml
standards-experimental/v1/EXP-V1-0002-todo-tracker/examples/: README.md
standards-experimental/v1/EXP-V1-0002-todo-tracker/src/: lib.rs
standards-experimental/v1/EXP-V1-0002-todo-tracker/tests/: README.md
standards-experimental/v1/EXP-V1-0003-fitness-functions/: Cargo.toml  README.md  experiment.toml
standards-experimental/v1/EXP-V1-0003-fitness-functions/src/: cli.rs  lib.rs
standards-experimental/v1/EXP-V1-0003-fitness-functions/tests/: README.md
standards-experimental/v1/EXP-V1-0004-documentation/: Cargo.toml  README.md  experiment.toml
standards-experimental/v1/EXP-V1-0004-documentation/agents/skills/: README.md
standards-experimental/v1/EXP-V1-0004-documentation/docs/: 00_overview.md  01_spec.md  02_install_contract.md
standards-experimental/v1/EXP-V1-0004-documentation/examples/: APSS.yaml  README.md  adr-template.md
standards-experimental/v1/EXP-V1-0004-documentation/src/: cli.rs  config.rs  frontmatter.rs  lib.rs  readme.rs
standards-experimental/v1/EXP-V1-0004-documentation/src/substandards/: adr.rs  purpose_and_vision.rs  retrospectives.rs
standards-experimental/v1/EXP-V1-0004-documentation/substandards/AD01-architecture-decision-records/: substandard.toml
standards-experimental/v1/EXP-V1-0004-documentation/substandards/PV01-purpose-and-vision/: substandard.toml
standards-experimental/v1/EXP-V1-0004-documentation/substandards/RT01-retrospectives/: substandard.toml
standards-experimental/v1/EXP-V1-0004-documentation/tests/: config_parsing.rs
standards/v1/APS-V1-0000-meta/: Cargo.toml  README.md  standard.toml
standards/v1/APS-V1-0000-meta/docs/: 01_spec.md
standards/v1/APS-V1-0000-meta/docs/adrs/: 0002-crates-io-distribution.md
standards/v1/APS-V1-0000-meta/src/: lib.rs
standards/v1/APS-V1-0000-meta/substandards/CF01-project-config/: Cargo.toml  README.md  substandard.toml
standards/v1/APS-V1-0000-meta/substandards/CL01-cli-contract/: Cargo.toml  README.md  substandard.toml
standards/v1/APS-V1-0000-meta/substandards/DI01-distribution/: Cargo.toml  README.md  substandard.toml
standards/v1/APS-V1-0000-meta/substandards/SS01-substandard-structure/: Cargo.toml  README.md  substandard.toml
standards/v1/APS-V1-0001-code-topology/: Cargo.toml  README.md  config.schema.json  standard.toml
standards/v1/APS-V1-0001-code-topology/docs/: 00_overview.md  01_spec.md
standards/v1/APS-V1-0001-code-topology/examples/: analyze_rust.rs  render_aps.rs  render_mermaid.rs  render_sample.rs
standards/v1/APS-V1-0001-code-topology/src/: config.rs  lib.rs
standards/v1/APS-V1-0001-code-topology/src/adapter/: queries.rs
standards/v1/APS-V1-0001-code-topology/src/cli/: analyze.rs  diff.rs  health.rs  mod.rs  report.rs  validate.rs  viz.rs  vsa_config.rs
standards/v1/APS-V1-0001-code-topology/src/substandards/: lang_rust.rs  mod.rs  viz_3d.rs  viz_mermaid.rs
standards/v1/APS-V1-0001-code-topology/substandards/3D01-force-directed/: Cargo.toml  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/CI01-github-actions/: Cargo.toml  README.md  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/FD01-force-directed/: README.md
standards/v1/APS-V1-0001-code-topology/substandards/LANG01-rust/: Cargo.toml  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/MM01-mermaid/: README.md  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/RS01-rust/: README.md
standards/v1/APS-V1-0001-code-topology/substandards/VIZ01-dashboard/: Cargo.toml  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/VIZ01-mermaid/: Cargo.toml  README.md  substandard.toml
standards/v1/APS-V1-0001-code-topology/substandards/VZ01-dashboard/: README.md  substandard.toml
standards/v1/APS-V1-0001-code-topology/tests/: README.md
standards/v1/APS-V1-0002-architecture-fitness/: Cargo.toml  README.md  standard.toml
standards/v1/APS-V1-0002-architecture-fitness/agents/skills/: README.md  configure-dimensions.md  interpret-report.md  validate-fitness.md
standards/v1/APS-V1-0002-architecture-fitness/docs/: 00_overview.md  01_spec.md  02_metrics-catalog.md  INTEGRATION.md
standards/v1/APS-V1-0002-architecture-fitness/docs/adrs/: 0001-promotion-from-exp-v1-0003.md  0002-mt01-md01-promotion.md  0003-six-dimension-promotion.md
standards/v1/APS-V1-0002-architecture-fitness/examples/: README.md  fitness-composite.json  fitness-exceptions.toml  fitness-report.json  fitness.toml
standards/v1/APS-V1-0002-architecture-fitness/schemas/: fitness-config.schema.json  fitness-exceptions.schema.json  fitness-report.schema.json
standards/v1/APS-V1-0002-architecture-fitness/src/: cli.rs  lib.rs
standards/v1/APS-V1-0002-architecture-fitness/src/substandards/: accessibility.rs  availability.rs  legality.rs  maintainability.rs  (+5 more)
standards/v1/APS-V1-0002-architecture-fitness/tests/: README.md  dependency_eval.rs  dimension_scoring.rs  maintainability_integration.rs  modularity_integration.rs  rule_parsing.rs  schema_compliance.rs  structural_eval.rs  system_fitness.rs  threshold_eval.rs
(+179 files in other folders)
