[workspace]
resolver = "2"
members = [
    "crates/apss-core",
    "crates/aps-cli",
    "crates/apss-bootstrap",
    "standards/v1/APS-V1-0000-meta",
    "standards/v1/APS-V1-0000-meta/substandards/SS01-substandard-structure",
    "standards/v1/APS-V1-0000-meta/substandards/CL01-cli-contract",
    "standards/v1/APS-V1-0000-meta/substandards/CF01-project-config",
    "standards/v1/APS-V1-0000-meta/substandards/DI01-distribution",
    # Official standards
    "standards/v1/APS-V1-0001-code-topology",
    # Experimental standards
    "standards-experimental/v1/EXP-V1-0002-todo-tracker",
    "standards-experimental/v1/EXP-V1-0003-fitness-functions",
]
exclude = [
]

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AgentParadise/agent-paradise-standards-system"
rust-version = "1.85"

[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Tree-sitter (for language analysis)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Filesystem
walkdir = "2.5"
glob = "0.3"

# Templates
handlebars = "6.3"

# Version resolution
semver = "1.0"

# Internal crates
apss-core = { version = "1.1.0", path = "crates/apss-core" }
