[package]
name = "apss"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APSS, the Agent Paradise Standards System bootstrap CLI"
readme = "README.md"
keywords = ["standards", "validation", "architecture", "cli", "governance"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "apss"
path = "src/main.rs"

[dependencies]
apss-core.workspace = true
clap.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile = "3.14"
