[package]
name = "apss-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for APS validation, discovery, and diagnostics"
readme = "README.md"
keywords = ["standards", "validation", "architecture", "governance"]
categories = ["development-tools"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
handlebars.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile = "3.14"
