[package]
name = "apss-v1-0003-fitness-functions"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Architecture Fitness Functions  -  declarative assertions on architectural properties (Experimental)"

[lib]
name = "fitness_functions"


[dependencies]
apss-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
glob.workspace = true
thiserror.workspace = true
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
