[package]
name = "aps-v1-0000-meta"
version = "1.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APS V1 Meta-Standard - defines structure for all V1 standards"

[dependencies]
apss-core.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.14"

