[package]
name = "apss-v1-0001-code-topology"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code Topology and Coupling Analysis "

[lib]
name = "code_topology"


[features]
default = ["ci-github-actions", "viz-mermaid", "viz-3d"]
ci-github-actions = []
viz-mermaid = []
viz-3d = []

[dependencies]
apss-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

# Tree-sitter framework
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3.14"
code-topology-rust-adapter = { package = "apss-v1-0001-lang01-rust", path = "substandards/LANG01-rust" }

[[example]]
name = "render_sample"
path = "examples/render_sample.rs"

[[example]]
name = "render_aps"
path = "examples/render_aps.rs"

[[example]]
name = "render_mermaid"
path = "examples/render_mermaid.rs"

[[example]]
name = "analyze_rust"
path = "examples/analyze_rust.rs"
