[package]
name = "apss-v1-0001-code-topology"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code Topology and Coupling Analysis "

[lib]
name = "code_topology"


[features]
default = ["ci-github-actions", "viz-mermaid", "viz-3d", "lang-rust", "viz-dashboard"]
ci-github-actions = []
viz-mermaid = []
viz-3d = []
lang-rust = ["dep:syn", "dep:quote", "dep:proc-macro2", "dep:walkdir"]
viz-dashboard = ["dep:chrono"]

[dependencies]
apss-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

# Tree-sitter framework
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
streaming-iterator = "0.1"

# LANG01-rust (lang-rust feature)
syn = { version = "2", features = [
    "full",
    "parsing",
    "visit",
    "extra-traits",
], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
walkdir = { workspace = true, optional = true }

# VIZ01-dashboard (viz-dashboard feature)
chrono = { version = "0.4", features = ["std"], optional = true }

[dev-dependencies]
tempfile = "3.14"

[[example]]
name = "render_sample"
path = "examples/render_sample.rs"

[[example]]
name = "render_aps"
path = "examples/render_aps.rs"

[[example]]
name = "render_mermaid"
path = "examples/render_mermaid.rs"

[[example]]
name = "analyze_rust"
path = "examples/analyze_rust.rs"
