[package]
name = "apss-v1-0001-code-topology"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code Topology and Coupling Analysis "
readme = "README.md"
keywords = ["topology", "architecture", "coupling", "analysis"]
categories = ["development-tools"]

[lib]
name = "code_topology"


# Feature keys are the substandard profile codes (the id suffix after the dot).
# The cargo feature name equals the substandard code: one source of truth, no
# lookup table. A parity validator (DI_SUBSTANDARD_FEATURE_MISMATCH) enforces
# that these keys stay equal to the substandard codes. See ADR-0002 and DI01.
[features]
default = ["RS01", "FD01", "VZ01", "MM01", "CI01"]
CI01 = []
MM01 = []
FD01 = []
RS01 = ["dep:syn", "dep:quote", "dep:proc-macro2"]
VZ01 = ["dep:chrono"]

[dependencies]
apss-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

# Tree-sitter framework
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
streaming-iterator = "0.1"

# LANG01-rust (RS01 feature)
syn = { version = "2", features = [
    "full",
    "parsing",
    "visit",
    "extra-traits",
], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }

# VIZ01-dashboard (VZ01 feature)
chrono = { version = "0.4", features = ["std"], optional = true }

[dev-dependencies]
tempfile = "3.14"

[[example]]
name = "render_sample"
path = "examples/render_sample.rs"

[[example]]
name = "render_aps"
path = "examples/render_aps.rs"

[[example]]
name = "render_mermaid"
path = "examples/render_mermaid.rs"

[[example]]
name = "analyze_rust"
path = "examples/analyze_rust.rs"
