[package]
name = "apss-project-config"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APSS Project Configuration (APS-V1-0000.CF01)  -  validates apss.yaml and typed standard configs"

[dependencies]
apss-core.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile = "3.14"
