[package]
name = "aps-v1-0000-cli01-cli-contract"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI Contract substandard - defines command patterns and traits for APS standards"

[dependencies]
apss-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
