[package]
name = "apss-distribution"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APSS Distribution & Installation (APS-V1-0000.DI01)  -  packaging, bootstrap, and CLI composition"

[dependencies]
apss-core.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.14"
