[package]
name = "aps-v1-0000-ss01-substandard-structure"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Defines structural requirements for all APS substandards"

[dependencies]
toml.workspace = true
apss-core.workspace = true

# Pattern matching for validation rules
regex = "1.11"
