[package]
name = "apss-v1-0001-3d01-force-directed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "3D Force-Directed Coupling Visualization for Code Topology"

[lib]
name = "code_topology_3d"


[dependencies]
toml.workspace = true
apss-core.workspace = true
code-topology = { package = "apss-v1-0001-code-topology", path = "../.." }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.14"
