[package]
name = "apss-v1-0001-viz01-mermaid"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mermaid diagram projector for Code Topology (C4, flowchart, dependency graphs)"

[lib]
name = "code_topology_mermaid"


[dependencies]
toml.workspace = true
apss-core.workspace = true
code-topology = { package = "apss-v1-0001-code-topology", path = "../.." }
serde.workspace = true
serde_json.workspace = true

